--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Map Mashup</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -18,13 +18,30 @@
   <body>
     <div id="map"></div>
     <script>
-      var map;
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+        var theirLatLng = {lat: -25.363, lng: 131.044};
+        var myLatLng = {lat: 43.652581, lng:-79.382274}
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: myLatLng
+        });
+
+        var theirmarker = new google.maps.Marker({
+          position: theirLatLng,
+          map: map,
+          title: 'Hello World!'
+        });
+
+        var mymarker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'My Marker!!',
+          draggable: true,
+          animation: google.maps.Animation.DROP
         });
       }
+
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCzdnL0wo1jSUROsLCU1INg4VYPQ4un2w&callback=initMap"
     async defer></script>
