fave places with markers, windows, and checkboxes

--- a/mapwithwindow.html
+++ b/mapwithwindow.html
@@ -12,12 +12,13 @@
       }
       #map {
         height: 100%;
+        width: 80%;
       }
 
       #bodyContent {
         background-color: #EEEEEE;
       }
-      
+
     </style>
   </head>
   <body>
